change div to span inside label according to html5 standarts

--- a/about.html
+++ b/about.html
@@ -48,14 +48,14 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 <p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="http://en.wikipedia.org/wiki/Robert_Jordan" title="Wiki">Robert Jordan's</a> or <a href="http://en.wikipedia.org/wiki/George_R.R._Martin" title="Wiki">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.name/" title="ftp">my home server</a>.</p>
 <label class="spoiler">
   <input type="checkbox" tabindex="-1">
-  <div class="box">
+  <span class="box">
     <p>
       The connection information
       <blockquote>
         User is <code>music</code>, password is the same.
       </blockquote>
     </p>
-  </div>
+  </span>
 </label>
 
 <p>Also I'm an <a href="https://www.archlinux.org/" title="Archlinux">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:</p>
