--- a/ru/about.html
+++ b/ru/about.html
@@ -49,14 +49,14 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 <p>На досуге я пишу небольшие приложения на C, C++ и Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="http://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD" title="Wiki">Роберта Джордана</a> или <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4" title="Wiki">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="ftp://repo.arcanis.name/" title="ftp">моем домашнем сервере</a>.</p>
 <label class="spoiler">
   <input type="checkbox" tabindex="-1">
-  <div class="box">
+  <span class="box">
     <p>
       Информация по подключению
       <blockquote>
         Пользователь <code>music</code>, пароль такой же.
       </blockquote>
     </p>
-  </div>
+  </span>
 </label>
 
 <p>Также я являюсь пользователем <a href="https://www.archlinux.org/" title="Archlinux">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
