change blockquote to p.spilerbody inside label.spoiler according to standards

--- a/ru/about.html
+++ b/ru/about.html
@@ -52,9 +52,9 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
   <span class="box">
     <p>
       Информация по подключению
-      <blockquote>
+      <p class="spoilerbody">
         Пользователь <code>music</code>, пароль такой же.
-      </blockquote>
+      </p>
     </p>
   </span>
 </label>
