--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
   <span class="box">
     <p>
       The connection information
-      <blockquote>
+      <p class="spoilerbody">
         User is <code>music</code>, password is the same.
-      </blockquote>
+      </p>
     </p>
   </span>
 </label>
