update to standards (4)

--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -62,20 +62,20 @@ See "man 1 ctrlconf" for more details
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li><p>Download an <a href="https://github.com/arcan1s/git-etc/releases" title="GitHub">archive</a> with latest version of source files.</p></li>
-  <li><p>Extract it and install the application:</p>
+  <li>Download an <a href="https://github.com/arcan1s/git-etc/releases" title="GitHub">archive</a> with latest version of source files.</li>
+  <li>Extract it and install the application:
 
 {% highlight bash %}
 ./install.sh "/path/to/root"
 {% endhighlight %}
 
-<p>If you want install it to <code>/</code> you must run it as root, e.g.:</p>
+If you want install it to <code>/</code> you must run it as root, e.g.:
 
 {% highlight bash %}
 sudo ./install.sh
 {% endhighlight %}
 
-<p>If no path is specified it will be installed to <code>/</code> by default.</p></li>
+If no path is specified it will be installed to <code>/</code> by default.</li>
 </ul>
 
 <h3><a href="#dependencies" class="anchor" id="dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
