--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -45,8 +45,8 @@ links:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li><p>Download an <a href="https://github.com/arcan1s/pytextmonitor/releases" title="GitHub">archive</a> with latest version of source files.</p></li>
-  <li><p>Extract it and install:</p>
+  <li>Download an <a href="https://github.com/arcan1s/pytextmonitor/releases" title="GitHub">archive</a> with latest version of source files.</li>
+  <li>Extract it and install:
 
 {% highlight bash %}
 cd /where/is/applet/
@@ -56,7 +56,7 @@ make
 make install
 {% endhighlight %}
 
-<p>For global isntallation type:</p>
+For global installation type:
 
 {% highlight bash %}
 cd /where/is/applet/
