--- a/ru/projects/git-etc.html
+++ b/ru/projects/git-etc.html
@@ -63,20 +63,20 @@ See "man 1 ctrlconf" for more details
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li><p>Скачайте <a href="https://github.com/arcan1s/git-etc/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</p></li>
-  <li><p>Извлеките из него файлы и установите приложение:</p>
+  <li>Скачайте <a href="https://github.com/arcan1s/git-etc/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
+  <li>Извлеките из него файлы и установите приложение:
 
 {% highlight bash %}
 ./install.sh "/путь/к/корню/"
 {% endhighlight %}
 
-<p>Если Вы хотите установить в <code>/</code>, Вы должны запустить это, как root:</p>
+Если Вы хотите установить в <code>/</code>, Вы должны запустить это, как root:
 
 {% highlight bash %}
 sudo ./install.sh
 {% endhighlight %}
 
-<p>Если путь не указан, пакет будет установлен в <code>/</code>.</p></li>
+Если путь не указан, пакет будет установлен в <code>/</code>.</li>
 </ul>
 
 <h3><a href="#dependencies" class="anchor" id="dependencies"><span class="octicon octicon-link"></span></a>Зависимости</h3>
