--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -89,9 +89,8 @@ netctlgui-helper [ options ]
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li><p>Скачайте <a href="https://github.com/arcan1s/netctl-gui/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</p></li>
-  <li><p>Извлеките из него файлы и установите приложение:</p>
-<p>Если Вы хотите установить в <code>/</code>, Вы должны запустить как root:</p>
+  <li>Скачайте <a href="https://github.com/arcan1s/netctl-gui/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
+  <li>Извлеките из него файлы и установите приложение. Если Вы хотите установить в <code>/</code>, Вы должны запустить как root:
 
 {% highlight bash %}
 cd /путь/к/распакованному/архиву
@@ -101,7 +100,7 @@ make
 sudo make install
 {% endhighlight %}
 
-<p>Доступные флаги cmake:</p>
+Доступные флаги cmake:
   <ul>
     <li>компоненты:
     <ul>
@@ -123,7 +122,6 @@ sudo make install
       <li><code>-DUSE_CAPABILITIES:BOOL=0</code> - не использовать setcap, чтобы дать необходимые привилегии хелперу</li>
       <li><code>-DUSE_QT5:BOOL=0</code> - использовать Qt4 вместо Qt5</li>
     </ul></li>
-  </ul></li>
   </ul></li>
 </ul>
 
