--- a/ru/projects/oblikuestrategies.html
+++ b/ru/projects/oblikuestrategies.html
@@ -36,8 +36,8 @@ links:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li><p>Скачайте <a href="https://github.com/arcan1s/oblikuestrategies/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</p></li>
-  <li><p>Извлеките из него файлы и установите приложение. Для глобальной установки наберите:</p>
+  <li>Скачайте <a href="https://github.com/arcan1s/oblikuestrategies/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
+  <li>Извлеките из него файлы и установите приложение. Для глобальной установки наберите:
 
 {% highlight bash %}
 cd /путь/куда/распакован/архив
@@ -47,7 +47,7 @@ make
 sudo make install
 {% endhighlight %}
 
-<p>Для локальной:</p>
+Для локальной:
 
 {% highlight bash %}
 cd /where/your/applet/is/installed
@@ -58,14 +58,13 @@ make install
 {% endhighlight %}
 
   </li>
-
-  <li><p>Перезапустите plasma, чтобы загрузить апплет:</p>
+  <li>Перезапустите plasma, чтобы загрузить апплет:
 
 {% highlight bash %}
 kquitapp plasma-desktop && sleep 2 && plasma-desktop
 {% endhighlight %}
 
-<p>Также Вам может потребоваться запустить <code>kbuildsycoca4</code>, чтобы распознать <code>*.desktop</code> файл:</p>
+Также Вам может потребоваться запустить <code>kbuildsycoca4</code>, чтобы распознать <code>*.desktop</code> файл:
 
 {% highlight bash %}
 kbuildsycoca4 &> /dev/null
