--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -46,8 +46,8 @@ links:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li><p>Скачайте <a href="https://github.com/arcan1s/pytextmonitor/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</p></li>
-  <li><p>Извлеките из него файлы и установите:</p>
+  <li>Скачайте <a href="https://github.com/arcan1s/pytextmonitor/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
+  <li>Извлеките из него файлы и установите:
 
 {% highlight bash %}
 cd /путь/к/извлеченным/файлам/
@@ -57,7 +57,7 @@ make
 make install
 {% endhighlight %}
 
-<p>Для глобальной установки наберите:</p>
+Для глобальной установки наберите:
 
 {% highlight bash %}
 cd /путь/к/извлеченным/файлам/
